updated sources to use dto
