# docs/swagger.json
@@ -314,27 +314,6 @@
                 }
             }
         },
-        "/settings/{key}": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Settings"
-                ],
-                "summary": "Returns a object based on the Key that was given.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Settings Key value",
-                        "name": "key",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
         "/sources": {
             "get": {
                 "produces": [
@@ -348,7 +327,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/routes.ListSourcesResults"
+                            "$ref": "#/definitions/routes.ListSources"
                         }
                     },
                     "400": {
@@ -382,7 +361,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/routes.ListSourcesResults"
+                            "$ref": "#/definitions/routes.ListSources"
                         }
                     },
                     "400": {
@@ -425,7 +404,32 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/routes.GetSource"
+                        }
+                    },
+                    "204": {
+                        "description": "No record found.",
+                        "schema": {
+                            "$ref": "#/definitions/routes.ApiError"
+                        }
+                    },
+                    "400": {
+                        "description": "Unable to query SQL.",
+                        "schema": {
+                            "$ref": "#/definitions/routes.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to process data from SQL.",
+                        "schema": {
+                            "$ref": "#/definitions/routes.ApiError"
+                        }
+                    }
+                }
             }
         },
         "/sources/new/reddit": {
@@ -518,7 +522,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/routes.GetSourceResult"
+                            "$ref": "#/definitions/routes.GetSource"
                         }
                     },
                     "204": {
@@ -1018,7 +1022,7 @@
                 }
             }
         },
-        "routes.GetSourceResult": {
+        "routes.GetSource": {
             "type": "object",
             "properties": {
                 "message": {
@@ -1066,7 +1070,7 @@
                 }
             }
         },
-        "routes.ListSourcesResults": {
+        "routes.ListSources": {
             "type": "object",
             "properties": {
                 "message": {
